--- a/main/res/menu/map_toolbar.xml
+++ b/main/res/menu/map_toolbar.xml
@@ -4,11 +4,15 @@
     <item android:id="@+id/search"
         android:title="Search"
         android:icon="@drawable/ic_search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+    <item android:id="@+id/filter"
+        android:title="Filter"
+        android:icon="@drawable/ic_editfilter"
+        app:showAsAction="always"/>
     <item android:id="@+id/settings"
         android:title="Settings"
         android:icon="@drawable/ic_settings"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
 </menu>
