--- a/main/res/layout/person_rv_item.xml
+++ b/main/res/layout/person_rv_item.xml
@@ -3,14 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/firstline"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/secondline"
         />
     <ImageView
         android:layout_width="wrap_content"
