--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
     <color name="white">#FFFFFF</color>
+    <color name="orange">#FFA500</color>
 </resources>
