person events and family members displays. not using expandable recycler views. one recycler and listtext. CORRECT person displays when marker is clicked.

--- a/main/res/layout/activity_person.xml
+++ b/main/res/layout/activity_person.xml
@@ -55,4 +55,26 @@
         android:id="@+id/familyTitle"
         android:text="@string/familyTitle"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/member1" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/member2"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/member3"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/member4"/>
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/family_recycler_view">-->
+
+    <!--</android.support.v7.widget.RecyclerView>-->
 </LinearLayout>
