--- a/main/res/layout/activity_map.xml
+++ b/main/res/layout/activity_map.xml
@@ -6,6 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cs240.fammapclient.MapActivity">
+    <Toolbar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:targetApi="lollipop"
+        android:id="@+id/map_act_toolbar">
+    </Toolbar>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
