--- a/main/res/layout/activity_person.xml
+++ b/main/res/layout/activity_person.xml
@@ -6,6 +6,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="cs240.fammapclient.PersonActivity">
+    <Toolbar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:targetApi="lollipop"
+        android:id="@+id/person_act_toolbar">
+    </Toolbar>
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,10 +77,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/member4"/>
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/family_recycler_view">-->
-
-    <!--</android.support.v7.widget.RecyclerView>-->
 </LinearLayout>
