back button works on filter, search, settings. Logout works on settings

--- a/main/res/layout/activity_settings.xml
+++ b/main/res/layout/activity_settings.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cs240.fammapclient.SettingsActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rowCount="12"
+        android:columnCount="1">
+        <TextView
+            android:id="@+id/logout_line1"
+            android:textSize="10pt"
+            android:text="@string/logoutLine1"
+            />
+        <TextView
+            android:id="@+id/logout_line2"
+            android:textSize="5pt"
+            android:text="@string/logoutLine2"
+            />
+    </GridLayout>
+
+</FrameLayout>
